--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Shrinath Nayak</title>
+      <title>Chatam D. Fasha</title>
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
       <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -24,7 +24,7 @@
             Shrinath Nayak
          </div>
          <p class="subtitle">Student</p>
-         <p class="location"><i class="fa fa-map-marker"> </i><a href="http://www.canaraengineering.in/" target="_blank"> Canara Engineering College</a>
+         <p class="location"><i class="fa fa-map-marker"> </i><a href="http://www.canaraengineering.in/" target="_blank"> Jasa Joki Valo/Genshin/ML</a>
          </p>
          <p class="icons animated pulse">
             <a href="https://twitter.com/shrinath_nayak" target="_blank">
@@ -61,7 +61,7 @@
       </div>
       <!--footer-->
       <footer class="animated fadeIn">
-         &copy; 2017. Shrinath Nayak.
+         &copy; 2022. Chatam D. Fasha
       </footer>
    </body>
 </html>
