--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>Chatam D. Fasha</title>
+      <title>Asa Sama</title>
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" type="text/css" href="css/font-awesome.css">
       <link rel="stylesheet" type="text/css" href="css/animate.css">
@@ -21,7 +21,7 @@
          <center><img class="center animated rollIn" src="img/ava.png" alt="avatar"></center>
          <hr>
          <div class="name">
-            Shrinath Nayak
+            ASASAMA
          </div>
          <p class="subtitle">Student</p>
          <p class="location"><i class="fa fa-map-marker"> </i><a href="http://www.canaraengineering.in/" target="_blank"> Jasa Joki Valo/Genshin/ML</a>
