--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <meta name="google-site-verification" content="JAKiTO9tnCK6GuyLn7tGsao9LPX9yyVpnnohBpLzoNk"/>
+    <meta name=”asasama” content =”asasama.github.io”>
+    <meta name="chatamdisty" content ="asasama.githun.io">
     <link rel="stylesheet" href="./style.css">
     <title>Chatam D. Fasha</title>
 </head>
