--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <!--Add your biodata-->
         <p class="full-name">Chatam D. Fasha</p>
-        <p class="skill">Junior Web Developer I </p>
-        <p class="skill">Open Joki AQW / Genshin</p>
-        <p class="place">Karangkajen, Yogyakarta</p>
+        <p class="skill">Pilot Service</p>
+        <p class="skill">Genshin, Honkai, Aqw, Request</p>
+        <p class="place">Yogyakarta</p>
         <!--Post Info-->
         <div class="posts-info">
             <p><span>50</span> Posts</p>
